# LEAPSCOPE

./: .dockerignore  .gitignore  Dockerfile  LEAPSCOPE_PRODUCT_SPEC.md  README.md  docker-compose.yml  pyproject.toml
config/: settings.yaml
src/: main.py  scanner.py
src/alerts/: __init__.py  manager.py
src/analysis/: fundamentals.py  greeks.py  options.py  technical.py
src/dashboard/: app.py
src/decision/: engine.py
src/history/: __init__.py  scan_history.py  signal_tracker.py
src/orders/: __init__.py  ticket.py
src/portfolio/: __init__.py  manager.py  models.py  pricing.py  storage.py
src/providers/: __init__.py  base.py  manager.py  public_provider.py  tradier_provider.py  yfinance_provider.py
src/scoring/: __init__.py  conviction.py
src/utils/: config_loader.py  logger.py  validation.py
tests/: test_phase9.py  test_portfolio.py  test_validation.py
